2010-01-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Define public/private specifications.

2009-12-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't crash in pytis_compute_summary_rights when unknown shortname is given.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/extensions/defs.py:
	Warn about inappropriate codebook rights in DMP editing.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/extensions/defs.py:
	Check for invalid codebook rights in specification checking.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py:
	Allow multiple error messages for a single check in specification checking.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	When copying action rights, ignore column specific rights.

2009-12-10  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Use pretty action and binding ids.

2009-12-10  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/data.py:
	Implement `pytis.data.Row.has_key()' more efficiently.
	
	This simple change makes Biblio catalog generation nearly twice as fast (from
	160 to 90 secs).

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Fix saving and loading user filters for new Filter arguments.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py:
	Checking private specifications in menu.

2009-12-08  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fix form actions retrieval in genmenu.

2009-12-08  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Update pubspec conversion of defs/menu.py.

2009-10-24  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't add form actions to multiform DMP menu item, only to the main subforms.

2009-10-24  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add form actions to all actions found in genmenu.
